# Frontier-CS

./: README.md  pyproject.toml
algorithmic/: Dockerfile  README.md  docker-compose.yml  entrypoint.sh  server.js
algorithmic/scripts/: llm_interface.py  run_tests.py
research/: CONTRIBUTING.md  docker_images.txt  generate_oneshot_gpt.py  main_loop.sh  models.txt  pairs.txt  problems.txt  readme  summary.md
research/cloudcast/: download_datasets.sh  evaluate.sh  evaluator.py  run_evaluator.sh  set_up_env.sh
research/cross_entropy/: download_datasets.sh  evaluator.py  set_up_env.sh
research/decoding_attn/: config.yaml  download_datasets.sh  evaluator.py  set_up_env.sh
research/flash_attn/: download_datasets.sh  evaluator.py  set_up_env.sh
research/fused_linear_ce/: download_datasets.sh  evaluator.py  run_evaluator.sh  set_up_env.sh
research/fused_linear_jsd/: download_datasets.sh  evaluator.py  set_up_env.sh
research/gdpa_attention/: download_datasets.sh  evaluator.py  set_up_env.sh
research/group_gemm/: download_datasets.sh  evaluate.sh  evaluator.py  set_up_env.sh
research/mamba2_scan/: download_datasets.sh  evaluate.sh  evaluator.py  set_up_env.sh
research/mixed_gemm/: download_datasets.sh  evaluator.py  set_up_env.sh
research/poc_generation/: generate_readmes.py  setup_variants.py
research/qknorm/: config.yaml  download_datasets.sh  evaluator.py  set_up_env.sh
research/qknorm/resources/: pyproject.toml  qknorm_baseline.py
research/ragged_attention/: download_datasets.sh  evaluator.py  set_up_env.sh
research/results/: leaderboard_summary.csv  models_summary.csv  problem_leaderboard.csv  problem_model_matrix.csv  results.csv
research/vdb_pareto/high_recall/resources/: bench-hnsw.py  gpt5_hnsw_paper.py  gpt5_hnsw_paper_fast.py  pyproject.toml
research/vector_addition/2_28/resources/: pyproject.toml
(+564 files in other folders)
