[project]
name = "frontier-cs"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "anthropic>=0.74.0",
    "colorlog>=6.10.1",
    "google-generativeai>=0.8.5",
    "numpy==2.3.4",
    "openai>=2.8.1",
    "python-dotenv>=1.2.1",
    "requests>=2.32.5",
    "skypilot>=0.10.5",
    "tqdm>=4.67.1",
]
