[project]
name = "qknorm-optimization"
version = "0.1.0"
description = "QKNorm optimization problem resources"
requires-python = ">=3.8"
dependencies = [
    "torch>=2.0.0",
    "flashinfer==0.5.0",
    "numpy>=1.21.0",
    "tqdm>=4.64.0",
]

[tool.setuptools]
py-modules = ["benchmark"]

[tool.setuptools.packages.find]
exclude = ["__pycache__"]

[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"
