[project]
name = "vector-addition"
version = "0.1.0"
description = "Vector addition problem resources"
requires-python = ">=3.8"
dependencies = [
    "torch>=2.0.0",
    "triton>=2.1.0",
    "numpy>=1.21.0",
]

[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"
